tests/baselines/reference/_cax-ez0001.errors.txt
tests/cases/conformance/_cax/_cax-ez0001.ts(8,5): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/_cax/_cax-ez0001.ts (1 errors) ====
    declare type Foo = { readonly foo: number[] };
    
    declare const obj: Foo | undefined;
    const isObj = !!obj;
    if (isObj) {
        obj.foo;
    } else {
        obj.foo;
        ~~~
!!! error TS2532: Object is possibly 'undefined'.
    }